--- a/resume.tex
+++ b/resume.tex
@@ -49,15 +49,29 @@
 
 \address{Researcher \\ Mechanical Engineer \\ Consultant}
 \address{\href{https://www.linkedin.com/in/ben-vanbavel/}{linkedin.com/in/ben-vanbavel/}} % Contact information
-
 %----------------------------------------------------------------------------------------
 
 \begin{document}
 
 \begin{rSection}{Personal Profile}
-	Self-motivated mechanical research engineer with a strong background in computational mechanics, statistics, and composite materials. 
-	Experienced in leading research projects, funding acquisition, collaborating with industry partners, 
-	and developing innovative solutions for complex engineering challenges.
+	Mechanical engineer and researcher with a strong background in computational mechanics, statistics, programming, and composite materials. 
+	Proven track record in securing multi-million euro research funding, collaborating in cross-disciplinary industrial consortia,
+	and leading R\&D projects to translate research into industrial applications.
+\end{rSection}
+
+%----------------------------------------------------------------------------------------
+%	TECHNICAL STRENGTHS SECTION
+%----------------------------------------------------------------------------------------
+
+\begin{rSection}{Competences}
+
+	\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} l @{}}
+		Soft Skills & Planning \& Organization, Communication, Mentorship, Leadership \& Collaboration \\
+		Hard Skills & Statistics, Computational Mechanics (FEM/FEA), Composite Materials, Programming \\
+		Tools & Python, Siemens NX (CAD), Simcenter 3D (CAE), Nastran, Samcef, Git \\
+		Languages & Dutch (Native), English (Fluent), French (Basic) \\
+	\end{tabular}
+
 \end{rSection}
 
 %----------------------------------------------------------------------------------------
@@ -67,19 +81,25 @@
 \begin{rSection}{Experience}
 
 	\begin{rSubsection}{Research Associate}{March 2025 - Present}{Flanders Make @KU Leuven}{Leuven, BE}
-		\item Secured \texteuro350k funding to valorize PhD research into a statistical software tool for industrial use.
-		\item Collaborated on a short-term valorization project with industrial partners to develop simulation-based reliability assessment software for mechanical product design.
-		\item Managed a \texteuro9.6M European research consortium of 15 partners to develop economical and sustainable composite hydrogen storage vessels, and helped secure its funding.
-		\item Supervised 13 MSc theses and 1 early-stage researcher in the field of composite materials, statistical simulation-based design, and reliability assessment.
+		\item \textbf{Leadership}: Led a specialized Work Package within a \texteuro9.6M European research consortium (15 partners),
+		coordinating R\&D efforts to develop economical and sustainable composite hydrogen storage vessels.
+		\item \textbf{Funding Acquisition}: Contributed to securing the \texteuro9.6M consortium budget, and independently secured \texteuro350k funding to
+		valorize PhD research into industrial statistical software.
+		\item \textbf{Technical Valorization}: Developed simulation-based reliability assessment software for mechanical product design in collaboration with
+		industrial partners.
+		\item \textbf{Mentorship}: Supervised 13 MSc theses and 1 early-stage researcher, focusing on mechanical engineering, statistical simulation and
+		composite material reliability.
 	\end{rSubsection}
 
 %------------------------------------------------
 
 	\begin{rSubsection}{Doctoral Researcher}{September 2020 - March 2025}{}{}
-		\item Led a team of 3 PhD candidates to realize a 4-year VLAIO-funded project named ``OptiVAS'' on reliable composite hydrogen storage vessels.
-		\item Collaborated with multinational industry partners (CAE software, automotive OEM, manufacturing) to gather requirements and validate research results.
-		\item Developed a novel reliability-based design methodology for composite pressure vessels, reducing material costs by 20\% while maintaining safety standards.
-		\item Communicated research findings through 5 journal publications and 7 international conference presentations.
+		\item \textbf{Innovation}: Developed a novel reliability-based design methodology for composite pressure vessels, reducing material costs by 20\% while
+		maintaining safety standards.
+		\item \textbf{Collaboration}: Partnered with 3 PhD candidates and 3 multinationals (CAE software, automotive OEM, manufacturing) to realize a 4-year
+		project ``OptiVAS'' on reliable hydrogen storage, ensuring industrial relevance.
+		\item \textbf{Communication}: Presented research findings at 7 international conferences and published 5 journal articles, enhancing the visibility
+		of the research group.
 	\end{rSubsection}
 
 \end{rSection}
@@ -97,21 +117,6 @@
 	\textbf{MSc in Mechanical Engineering: Aerospace} \hfill \textit{2015 - 2020} \\
 	KU Leuven, Belgium \smallskip \\
 	Grade: Magna Cum Laude \\
-
-\end{rSection}
-
-%----------------------------------------------------------------------------------------
-%	TECHNICAL STRENGTHS SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{rSection}{Competences}
-
-	\begin{tabular}{@{} >{\bfseries}l @{\hspace{6ex}} l @{}}
-		Soft Skills & Planning \& Organization, Communication, Leadership \\
-		Hard Skills & Statistics, Computational Mechanics (FEM/FEA), Composite Materials, Programming \\
-		Tools & Python, Siemens NX (CAD), Simcenter 3D (CAE), Nastran, Samcef, Git \\
-		Languages & Dutch (Native), English (Fluent), French (Basic) \\
-	\end{tabular}
 
 \end{rSection}
 
